[package]
name = "news_feeding"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
amiquip = { version = "0.4", default-features = false }
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = { version = "0.2.5", features = ["tokio"] }
log = "0.4.0"
env_logger = "0.8.4"
chrono = "0.4"
cassandra-cpp = "0.17.0"
